Fix some pages titles

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Osny Netto - Front-end developer and UI Designer
+title: Osny Netto - Front End Developer and UI Designer
 email: netto@osny.me
 baseurl: ""
 url: "http://www.osny.me"
